--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "reset-css": "^4.0.1",
     "semantic-ui-css": "^2.4.1",
     "semantic-ui-react": "^0.85.0",
+    "underscore": "^1.9.1",
     "uuid": "^3.3.2"
   },
   "scripts": {
