Changed homepage in package.json, and bug fix in cards reducer

--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "ultimate-kanban",
-  "homepage": "http://patrickmao93.github.io/ultimate-kanban",
+  "homepage": ".",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
